{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 391,
  "lineage": "b6bb9cd6-6199-510f-bed8-5a439740fcb0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837491041518:route-table/rtb-04d5c855e9402e70d",
            "default_route_table_id": "rtb-04d5c855e9402e70d",
            "id": "rtb-04d5c855e9402e70d",
            "owner_id": "837491041518",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0aa1e29ead00bd87b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0a2f812a6ddb0a970"
              }
            ],
            "tags": {
              "Name": "terraform-prod-Private_RT"
            },
            "tags_all": {
              "Name": "terraform-prod-Private_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-08000bf57ee3f87bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.New_Customer_VPC_EIP",
            "aws_internet_gateway.New_Customer_VPC_Internet_GW",
            "aws_nat_gateway.New_Customer_VPC_nat_gw",
            "aws_subnet.public_subnets",
            "aws_vpc.New_Customer_VPC",
            "aws_vpc_peering_connection.peering_connection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "New_Customer_VPC_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3ef75e5cd25d624",
            "domain": "vpc",
            "id": "eipalloc-0a3ef75e5cd25d624",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-193-140-160.compute-1.amazonaws.com",
            "public_ip": "44.193.140.160",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-prod-EIP"
            },
            "tags_all": {
              "Name": "terraform-prod-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "New_Customer_VPC_Internet_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837491041518:internet-gateway/igw-02ea41d33b7e834e7",
            "id": "igw-02ea41d33b7e834e7",
            "owner_id": "837491041518",
            "tags": {
              "Name": "terraform-prod-Internet-GW"
            },
            "tags_all": {
              "Name": "terraform-prod-Internet-GW"
            },
            "vpc_id": "vpc-08000bf57ee3f87bc"
          },
          "dependencies": [
            "aws_vpc.New_Customer_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "New_Customer_VPC_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3ef75e5cd25d624",
            "connectivity_type": "public",
            "id": "nat-0aa1e29ead00bd87b",
            "network_interface_id": "eni-001d294614a1a2029",
            "private_ip": "10.1.7.58",
            "public_ip": "44.193.140.160",
            "subnet_id": "subnet-0a6ee19c09a2f4220",
            "tags": {
              "Name": "terraform-prod-NAT-GW"
            },
            "tags_all": {
              "Name": "terraform-prod-NAT-GW"
            }
          },
          "dependencies": [
            "aws_eip.New_Customer_VPC_EIP",
            "aws_internet_gateway.New_Customer_VPC_Internet_GW",
            "aws_subnet.public_subnets",
            "aws_vpc.New_Customer_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837491041518:route-table/rtb-0616b9dba20b10966",
            "id": "rtb-0616b9dba20b10966",
            "owner_id": "837491041518",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ea41d33b7e834e7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-prod-Public_RT"
            },
            "tags_all": {
              "Name": "terraform-prod-Public_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-08000bf57ee3f87bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.New_Customer_VPC_Internet_GW",
            "aws_vpc.New_Customer_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0532e503e32348092",
            "route_table_id": "rtb-0616b9dba20b10966",
            "subnet_id": "subnet-0a6ee19c09a2f4220"
          },
          "dependencies": [
            "aws_internet_gateway.New_Customer_VPC_Internet_GW",
            "aws_route_table.Public_RT",
            "aws_subnet.public_subnets",
            "aws_vpc.New_Customer_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f585ea088d5882b7",
            "route_table_id": "rtb-0616b9dba20b10966",
            "subnet_id": "subnet-06d8cc1e256b577ff"
          },
          "dependencies": [
            "aws_internet_gateway.New_Customer_VPC_Internet_GW",
            "aws_route_table.Public_RT",
            "aws_subnet.public_subnets",
            "aws_vpc.New_Customer_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "New_Customer_VPC_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837491041518:security-group/sg-0588ad6b85ad617a6",
            "description": "security group for New Customer production environment lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0588ad6b85ad617a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 28000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-prod-SG",
            "name_prefix": "",
            "owner_id": "837491041518",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-prod-SG"
            },
            "tags_all": {
              "Name": "terraform-prod-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-08000bf57ee3f87bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.New_Customer_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837491041518:subnet/subnet-0e85303c0609e2027",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.7.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e85303c0609e2027",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "837491041518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-08000bf57ee3f87bc"
          },
          "dependencies": [
            "aws_vpc.New_Customer_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837491041518:subnet/subnet-03af3ade752595f3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.7.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03af3ade752595f3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "837491041518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-08000bf57ee3f87bc"
          },
          "dependencies": [
            "aws_vpc.New_Customer_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837491041518:subnet/subnet-0a6ee19c09a2f4220",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.7.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6ee19c09a2f4220",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "837491041518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-08000bf57ee3f87bc"
          },
          "dependencies": [
            "aws_vpc.New_Customer_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837491041518:subnet/subnet-06d8cc1e256b577ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.7.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d8cc1e256b577ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "837491041518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-08000bf57ee3f87bc"
          },
          "dependencies": [
            "aws_vpc.New_Customer_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "New_Customer_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837491041518:vpc/vpc-08000bf57ee3f87bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.7.0/24",
            "default_network_acl_id": "acl-055ec83a2ad9d838f",
            "default_route_table_id": "rtb-04d5c855e9402e70d",
            "default_security_group_id": "sg-0035aa5603dc42ad9",
            "dhcp_options_id": "dopt-2183f45b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08000bf57ee3f87bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d5c855e9402e70d",
            "owner_id": "837491041518",
            "tags": {
              "Name": "terraform-prod"
            },
            "tags_all": {
              "Name": "terraform-prod"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peering_connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0a2f812a6ddb0a970",
            "peer_owner_id": "837491041518",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-08000bf57ee3f87bc",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "terraform-prod-vultara-vpc-peering"
            },
            "tags_all": {
              "Name": "terraform-prod-vultara-vpc-peering"
            },
            "vpc_id": "vpc-01ff5914b2252b003"
          },
          "dependencies": [
            "aws_vpc.New_Customer_VPC"
          ]
        }
      ]
    }
  ]
}